--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <main>
         <div class="Banner">
-            <h1 class="Banner__head1">Ciclismo Amateur</h1>
-            <h2 class="Banner__head2">Práctica y mecánica</h2>
+            <h1 class="Banner__head1">Wena MUNDO</h1>
+            <h2 class="Banner__head2">Wena MUNDO</h2>
         </div>
         
         <div class="portfolio">
